Save/Update files

--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -13,7 +13,7 @@
  autocracy_reform:0 "専制政治"
  autocracy_reform_desc:0 "専制君主は自らに権力を集中させます。国家はしばしば個人的な財産とみなされます。 支配者が側近や奉仕者を持つことは珍しいことではありませんが、彼らは王家の一部とみなされます。"
  plutocratic_reform:0 "富豪政治"
- plutocratic_reform_desc:0 "富豪王国は君主が王国の富豪たちにより支えされている政体です。君主はしばしば成功した商業企業のトップであり、多くの支援者を持ちます"
+ plutocratic_reform_desc:0 "富豪王国は君主が王国の富豪たちにより支えられている政体です。君主はしばしば成功した商業企業のトップであり、多くの支援者を持ちます"
  enforce_trader_privileges_reform:0 "商業特権の施行"
  enforce_trader_privileges_reform_desc:0 "国家と成功した商業企業との関係を強化することで、私たちは世界に広がるだけでなく、自国に持ち込む利益を増やすことができます。"
  indian_sultanate_reform:0 "インド・スルタン国"
@@ -37,7 +37,7 @@
  of_noble_bearing_reform:0 "法服貴族"
  of_noble_bearing_reform_desc:0 "貴族は議会だけでなく私たちの君主に永遠の忠誠を与えることを約束しました。 私たちの領域が拡大するにつれて、これらの任務は剣だけでは実行できないことは明らかです。 法服とペンで武装する新世代の貴族たちが奉仕する時です。彼らは、帯剣貴族と同じように、彼らの剣や鎧で国家に奉仕します。"
  meritocratic_focus_reform:0 "実力主義による雇用"
- meritocratic_focus_reform_desc:0 "王国が大きくなるにつれ、特権を持つものだけが統治をすることを不合理になっています。 代わりに、人々の能力だけを見なければなりません。 実力主義によるシステムは、行政官は彼らの才能により選ばれるのであり、彼らの親によってではありません。"
+ meritocratic_focus_reform_desc:0 "王国が大きくなるにつれ、特権を持つものだけが統治をすることは不合理になっています。 代わりに、人々の能力だけを見なければなりません。 実力主義によるシステムは、行政官は彼らの才能により選ばれるのであり、彼らの親によってではありません。"
  deliberative_assembly:0 "議会"
  parliamentary_reform:0 "議会制度"
  parliamentary_reform_desc:0 "政府首脳を国家元首から分離し、国家の統治に関する責任の多くを、立法議会に与える時が来ている。"
@@ -91,7 +91,7 @@
  dakhni_culture_reform:0 "ダッキニー文化"
  dakhni_culture_reform_desc:0 "我が王国が発展し、成熟するにつれ、デカンの様々な大都市の上流階級の間でデカンの文化の結合が出現し始めている。彼らは全員共通の言語ダッキニー語を話す。それは現地語であるペルシア語とトルコ語の合成言語である。我々の統治の中でこの上流階級の文化を有効に活用し、国の隅々まですばやく再配置できる管理者を雇用しよう。"
  free_city:0 "自由都市"
- free_city_desc:0 "自由帝国都市は神聖ローマ帝国の皇帝により特別な権利、特権を与えられた都市です"
+ free_city_desc:0 "自由帝国都市は神聖ローマ帝国の皇帝により特別な権利、特権を与えられた都市です。"
  revolutionary_republic_reform:0 "革命共和制"
  presidential_despot_reform:0 "大統領独裁"
  presidential_despot_reform_desc:0 "この国では、任命された独裁者が国家に対してほぼ絶対的な権力を行使します。"
@@ -111,7 +111,7 @@
  provincial_governments_reform:0 "地方政府"
  provincial_governments_reform_desc:0 "私たちの行政が効率的になるためには、地方政府が機能を実行するために必要な自由を許可する必要があります。 地方選挙は、信頼できる人を任命して、中央政府の要請に答える人を確実に確保します。"
  administrative_divisions_reform:0 "行政部門"
- administrative_divisions_reform_desc:0 "国家を複数の地理的領域に分け、中央政府により任命された役人により、支配と行政を行われるようにしましょう。"
+ administrative_divisions_reform_desc:0 "国家を複数の地理的領域に分け、中央政府により任命された役人により、支配と行政が行われるようにしましょう。"
  union_of_states_reform:0 "連邦国家"
  union_of_states_reform_desc:0 "一つの統一された国家ではなく、私たちの国は、多くの国が一つの連邦に統合されたことにより成長しました。 私たちの政権が成長し進化するにつれ、加盟国の権利を侵害してはならない。そのようにすれば、我々の存在の原則を踏みにじるだろう。"
  parliamentary_vs_presidential:0 "権力分立"
@@ -210,7 +210,7 @@
  mughal_government:0 "ムガルのディーワーン"
  mughal_government_desc:0 "我が王朝が何世紀にもわたって学んだことが1つあるとすれば、我々が拡大している地域の現地民を容認できなければならないということだ。我が帝国が発展し続けるられるように、我々が征服している者達から学ぶことに努めよう。"
  mansabdari_reform:0 "マンサブダーリー制"
- mansabdari_reform_desc:0 "我が帝国には、忠実で有能な従者が必要だ。数的なマンサブ制に従って貴族階級を鍛え直そう。各々の貴族には義務と希望双方に対応する階級が与えられ、その後、その階級に従って彼を支援する行政によって帝国周辺の土地が割り当てられるだろう。高く階級付けされる方法の指針は能力でなければならず、この経路は宗教や生まれにかかわらず開かれていなければならない。これこそが、帝国を発展させるのに最も優秀な者達の地位を確実に上げることができます。"
+ mansabdari_reform_desc:0 "我が帝国には、忠実で有能な従者が必要だ。数的なマンサブ制に従って貴族階級を鍛え直そう。各々の貴族には義務と希望双方に対応する階級が与えられ、その後、その階級に従って彼を支援する行政によって帝国周辺の土地が割り当てられるだろう。高く階級付けされる方法の指針は能力でなければならず、この経路は宗教や生まれにかかわらず開かれていなければならない。これこそが、帝国を発展させるのに最も優秀な者達の地位を確実に上げることができる。"
  zabt_reform:0 "ザブト制"
  zabt_reform_desc:0 "行政の浸透は、この地域内のどんな帝国にとっても最大の障害となっている。経済生産性を奨励することは国家の利益のためとなり、このことを常に心に留めて置かねばならず、また同時に地域経済を常に注視せねばならない。我々が目標とする数多くの臣民を簡単に管理する方法はないので、この問題を解決するには、大量の資源と約束事が必要だ。\n土地や作物栽培、土地収入、地方経済に関する定期的な土地測量を行う行政を作ろう。さらに、常に全臣民に現金払いを要求し、現地経済の奨励を必要とする際はより軽減された課税を提供せねばならない。"
  FEDERAL_KINGDOM:0 "連邦王国"
