--- a/source/localisation/insults_l_english.yml
+++ b/source/localisation/insults_l_english.yml
@@ -48,7 +48,7 @@
  insult_from_arabs:0 "貴君が死んだラクダの腹に縫い込まれることを願う。"
  insult_against_craven:0 "お前の正装を茶色に変えてみるのはどうだ？"
  insult_against_sinner:0 "[Root.Consort.GetName]は自身の部屋の侍女の人数を覚えているか？"
- insult_against_hre:0 "貴国は神聖でも、ローマでも、帝国でもない。"
+ insult_against_hre:0 "貴国は神聖でも、ローマ的でも、帝国でもない。"
  insult_against_serbia:0 "おいおい、お前のところの鷲くんは2つも頭を持っているのに、ただの1つも冠を持てないのかい。お笑いだ。"
  insult_against_european_in_india:0 "貴様が消え去る時だ。"
  insult_japanese:0 "切腹したところで貴殿の名誉が回復することはない。"
