--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -309,7 +309,7 @@
  ire_conquer_isles_title:0 "スコットランド高地の征服"
  ire_conquer_isles_desc:0 "何世紀も前、スコットランド高地にはアイルランドの宗教的な集落が点在していた。彼らは再びアイルランドの後援を享受するべきだ。"
  ire_koi_tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、諸島王国地域に、州を§Y2§!州以上領有する。"
- ire_highlands_tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、高原地域に、州を§Y4§!州以上領有する。"
+ ire_highlands_tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、ハイランド地域に、州を§Y4§!州以上領有する。"
  ire_conquer_scotland_title:0 "スコットランドの征服"
  ire_conquer_scotland_desc:0 "スコットランドは我々のブリテンを征服する道に立ちはだかっている。イングランド支配に抵抗する彼らの弱い試みは永遠に続くことはできず、代わりに彼らが我々の保護を受け入れるべきなのは至極当然だ。"
  ire_rule_britannia_title:0 "統べよ、ブリタニア"
@@ -1212,7 +1212,7 @@
  mug_upper_burma_campaign_title:0 "上ビルマ攻略"
  mug_upper_burma_campaign_desc:0 "アラカン山脈の向こうには鉱物や宝石が豊富な土地がある。上ビルマは人を寄せ付けない地域でもあり、好戦的なシャン族の本拠地で、何世紀にも渡って戦っている。\nしかし、ルビーの源泉のようなものは、地球上のどの他の場所より多いので、決して我慢はできない。"
  mug_open_up_china_title:0 "中国の開放"
- mug_open_up_china_desc:0 "我々の最近の拡大は中華帝国の国境に立たせた。中国は常に遠方の巨人であった。インド亜大陸全体をまとめたのと同じくらい富と人口をもつ国であるが、インドはしばしばバラバラになったが、中国は安定し、中央集権化した。\n中国人は我々の条件で我々と関わり合いたがらないようだが、強力なムガル帝国の[Root.Monarch.GetTitle]による指示命令を彼らにしてはならない。教えよう、この古い帝国に我々の新しく築かれた国家が何を成し遂げる事が出来るかを．．．"
+ mug_open_up_china_desc:0 "我々の最近の拡大は中華帝国の国境に立たせた。中国は常に遠方の巨人であった。インド亜大陸全体をまとめたのと同じくらい富と人口をもつ国であるが、インドはしばしばバラバラになったが、中国は安定し、中央集権化した。\n中国人は我々の条件で我々と関わり合いたがらないようだが、強力なムガル帝国の[Root.Monarch.GetTitle]による指示命令を彼らにしてはならない。教えよう、この古い帝国に我々の新しく築かれた国家が何を成し遂げる事が出来るかを..."
  mug_general_land_assessement_title:0 "一般的土地評価"
  mug_general_land_assessement_desc:0 "行政の浸透は常にどんなインド帝国においても大きな問題であった。ヒンドゥスターンの膨大な富への課税は、そうやって軍事力や権力を持つ事の問題だけではない。国境内に存在する歳入の源泉が何かを測定、評価、マッピングする事も大いに大事な事だ。\n我が支配下の全領域の一般的な土地評価はとてつもなく我々に恩恵を与えそうだ、たとえそれが大事業でもあろうが。"
  mug_sind_campaign_title:0 "シンド攻略"
@@ -1268,7 +1268,7 @@
  mug_across_vindhyas_title:0 "ビンディヤ山脈の横断"
  mug_across_vindhyas_desc:0 "マールワー高原は、南インドや我々とデカンとして知られる我々とタミル族の国家との間にある広大な地域への拡大のための良い作戦拠点だ。この地域は多くの点で我々が慣れ親しんだ地域とはかなり異なっている。ゴールコンダの伝説的なダイヤモンドや、コロマンデル海岸の豊かな貿易都市は多くの人が渇望したが、そこに着く為には、山やジャングルを越え、土着の王国を打ち負かし、最終的にデリーのスルタンが決してできなかったものを支配する準備ができていなければならない。\nヴィンディヤ山脈を越える時だ。"
  mug_riches_of_golconda_title:0 "ゴールコンダの富"
- mug_riches_of_golconda_desc:0 "世界最大のダイヤモンド市場で有名であるゴールコンダの要塞は、多くの言語で富と同義語になっている。ゴールコンダとコラールの伝説的な鉱山双方が今、我々の前に開けている。俗説によると、莫大な富が我々を待ちうけている．．．"
+ mug_riches_of_golconda_desc:0 "世界最大のダイヤモンド市場で有名であるゴールコンダの要塞は、多くの言語で富と同義語になっている。ゴールコンダとコラールの伝説的な鉱山双方が今、我々の前に開けている。俗説によると、莫大な富が我々を待ちうけている..."
  mug_coromandel_coast_title:0 "コロマンデル海岸"
  mug_coromandel_coast_desc:1 "コロマンデル海岸が今我々の前にある。 何千年ではないにせよ、何百年にも渡ってインド貿易における主要な中心地となっている。ここでは、我が経済が必要とする銀を大量にもたらす東西からの外国人が交易所や工場を設立する。彼らが故郷に持ち帰る為に求める高価な織物や香辛料、宝石、真珠、工業製品は、また、製造や貿易の協力な遺産を持つ偉大なタミル族やテルグ族の都市が存在するこの地域で簡単に見つかる。"
  gen_north_india_unite_culture_title:0 "文化の中心地"
@@ -1806,7 +1806,7 @@
  gra_reconquer_valencia_title:0 "バランシヤの奪還"
  gra_reconquer_valencia_desc:0 "バランシヤの古代アンダルシアの要塞は、これまで2世紀近く前にレコンキスタで陥落した。しかし、信仰上の兄弟姉妹への虐待は忘れられていない。この大都市及びその周辺の領土を取り戻し、我々が彼らがかつて思っていた程無力ではない事をヨーロッパに思い出させねばならない。"
  gra_retake_ceuta_title:0 "セブタの港"
- gra_retake_ceuta_desc:0 "干渉してくるキリスト教徒の王達は、セブタの戦略港が我々の手の外のままであるよう努めた。我々の虐待された親族を解放すしようと数多く試みられたが、それは再度外国の支配下にある。上陸し、上陸拠点を再度確立せよ。"
+ gra_retake_ceuta_desc:0 "干渉してくるキリスト教徒の王達は、セブタの戦略港が我々の手の外のままであるよう努めた。我々の虐待された親族の解放が数多く試みられたが、それは再度外国の支配下にある。上陸し、上陸拠点を再度確立せよ。"
  gra_reconquer_sevilla_title:1 "クルトゥバの解放"
  gra_reconquer_sevilla_desc:0 "かつて大都市イスビーリーヤとクルトゥバはイスラム思想の砦として、知られている世界全体で有名であった。世界の舞台で正当な立場を取り戻したいならば、外国の抑圧者を排除し、かつての栄光を取り戻さねばならない。"
  gra_restore_the_andalusian_caliphate_title:0 "アル＝アンダルスの復活"
@@ -1824,7 +1824,7 @@
  adu_develop_cordoba_desc:0 "都市クルトゥバは、上流階級の退廃と外国人の暴君の抑圧により、大きな衰退を経験した。クルトゥバを我々の復元した国家にふさわしい状態へと戻せ。"
  alandalus_returns_tooltip:0 "州に与える補正§Yクルトゥバの復興§!がクルトゥバに与えられる"
  adu_conquer_portugal_title:0 "ポルトガル王国の終焉"
- adu_conquer_portugal_desc:0 "ポルトガル王国はあまりにも長い間イベリアの豊かな西海岸を支配してきた。この領土の多くがかつて我々の先祖の手に正当にあり、取り戻さねばならない。 噂では、彼らが遠方の土地で新しい征服しようとしているーおそらく、さらなる調査の口実としてこの機会を利用できる。"
+ adu_conquer_portugal_desc:0 "ポルトガル王国はあまりにも長い間イベリアの豊かな西海岸を支配してきた。この領土の多くがかつて我々の先祖の手に正当にあり、取り戻さねばならない。 噂では、彼らが遠方の土地で新しい征服をしようとしているーおそらく、さらなる調査の口実としてこの機会を利用できる。"
  adu_explore_further_title:0 "探索の継続"
  adu_explore_further_desc:0 "新世界の驚きべき発見は我が国民を探検に関する狂乱の渦へと巻き込んだ。この発見の航海を続けよ。昔我々を抑圧した者たちがする前に、私たちはこの新しい土地を主張するだろう。"
  adu_colonize_caribbean_cn:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、カリブ海植民地域に、完全に植民地化された州を§Y5§!州以上領有する。"
