--- a/source/localisation/religion_l_english.yml
+++ b/source/localisation/religion_l_english.yml
@@ -31,7 +31,7 @@
  norse_pagan_reformed_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  norse_pagan_reformed_rebels_title:0 "宗教"
  norse_pagan_reformed_rebels_name:0 "$RELIGION$の狂信者"
- norse_pagan_reformed_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ norse_pagan_reformed_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  norse_pagan_reformed_rebels_army:0 "$RELIGION$軍"
  odin:0 "オーディン"
  odin_desc:0 "オーディンは北欧神話の主神です。主に戦争、勝利、そして死を司ります。"
@@ -61,19 +61,19 @@
  desc_spreading_norse_rituals:0 "我々はノース信仰になじみない人々にも、我々の信仰の儀式や神々について積極的に学ばせようとしている。"
  inti_rebels_title:0 "宗教"
  inti_rebels_name:0 "$RELIGION$の狂信者"
- inti_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ inti_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  inti_rebels_army:0 "$RELIGION$軍"
  inti_rebels_demand:0 "$COUNTRYNAME$の改宗"
  inti_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  maya_rebels_title:0 "宗教"
  maya_rebels_name:0 "$RELIGION$の狂信者"
- maya_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ maya_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  maya_rebels_army:0 "$RELIGION$軍"
  maya_rebels_demand:0 "$COUNTRYNAME$の改宗"
  maya_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  nahuatl_rebels_title:0 "宗教"
  nahuatl_rebels_name:0 "$RELIGION$の狂信者"
- nahuatl_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ nahuatl_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  nahuatl_rebels_army:0 "$RELIGION$軍"
  nahuatl_rebels_demand:0 "$COUNTRYNAME$の改宗"
  nahuatl_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
@@ -82,7 +82,7 @@
  tengri_pagan_reformed_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  tengri_pagan_reformed_rebels_title:0 "宗教"
  tengri_pagan_reformed_rebels_name:0 "$RELIGION$の狂信者"
- tengri_pagan_reformed_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ tengri_pagan_reformed_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  tengri_pagan_reformed_rebels_army:0 "$RELIGION$軍"
  zoroastrian_group:0 "ゾロアスター教"
  zoroastrian:0 "ゾロアスター教"
@@ -90,5 +90,5 @@
  zoroastrian_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  zoroastrian_rebels_title:0 "宗教"
  zoroastrian_rebels_name:0 "$RELIGION$の狂信者"
- zoroastrian_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州では蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようと努めます。"
+ zoroastrian_rebels_desc:0 "宗教の狂信者は異なる信仰の国家に支配された州で蜂起する傾向にあります。彼らはその信仰を広め、不信心者を打倒しようとします。"
  zoroastrian_rebels_army:0 "$RELIGION$軍"
