--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -201,7 +201,7 @@
  republic_factions.16.a:0 "高潔さは長期的により多くの価値がある。"
  republic_factions.16.b:0 "[Root.GetName]のために我々自身の利益に反することは期待できない。"
  republic_factions.17.t:0 "水よりも濃い"
- republic_factions.17.d:0 "[Root.GetName]の多くの強力な人々にとって、人脈や富が地位を決定するが、貴族は依然として血縁関係を高く評価している。貴族は現時点で共和国の最も強力な派閥から遠く離れているが、依然として忠誠を保証するために同じ方法を使用している。\n\nあなたの娘が有名な貴族の一族から最近結婚を求められたのは、明らかにそのような試みである。あなたは、政治を彼らの家系に近づけ、共和国を弱めることを余儀なくされるが、しかし、拒否することは、あなたの計画した軍事改革を支援するよう強制することをさらに困難にするだろう。"
+ republic_factions.17.d:0 "[Root.GetName]の多くの強力な人々にとっては、人脈や富が地位を決定するが、貴族は依然として血縁関係を高く評価している。貴族は現時点で共和国の最も強力な派閥から遠く離れているが、依然として忠誠を保証するために同じ方法を使用している。\n\nあなたの娘が有名な貴族の一族から最近結婚を求められたのは、明らかにそのような試みである。あなたは、政治を彼らの家系に近づけ、共和国を弱めることを余儀なくされるが、しかし、拒否することは、あなたの計画した軍事改革を支援するよう強制することをさらに困難にするだろう。"
  republic_factions.17.a:0 "できるだけ丁寧に断る。"
  republic_factions.17.b:0 "我々はこの一族と緊密な関係を維持する必要がある。"
  republic_factions.18.t:0 "ギルドの協力"
