--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -423,7 +423,7 @@
  PROMOTE_CULTURE_CONFIRM_DESC:0 "$NAME|Y$を登用し、受容された状態とするには$COST|Y$£dip£のコストがかかります。\n本当によろしいですか？"
  DEMOTE_CULTURE_CONFIRM_DESC:0 "$NAME|Y$を降格させ、受容されていない状態とするには$COST|Y$£dip£のコストがかかります。\nすべての$NAME|Y$の州の§Y不穏度§!は$YEARS$年の間、$UNREST$上昇するでしょう\n本当によろしいですか？"
  coptic_flavor.33.t:0 "信仰間の連帯"
- coptic_flavor.33.d:0 "我々は真の信仰に従うコプト教徒であることを誇りに思っている。我々は確固とした信念を持っており、決してキリストを捨てることはないが、キリスト教社会の残りから隔離されていることは弱点である。我々は多くの面で宗教的敵に囲まれている。差し迫った戦争はそうなるか、ならないかの問題ではなく、いつ起こるかという問題である。それが勃発する前に、我々は強力な同盟国を追求しようと努めるべきだ。北のはるか遠くにキリスト教の王国があるが、その正確な場所とその土地までの距離はわからない。しかし、我々は彼らを見つけるという目的で遠征に資金を提供することができる。"
+ coptic_flavor.33.d:0 "我々は真の信仰に従うコプト教徒であることを誇りに思っている。我々は確固とした信念を持っており、決してキリストを捨てることはないが、他のキリスト教社会から隔離されていることは弱点である。我々は多くの面で宗教的な敵に囲まれている。差し迫った戦争はそうなるか、ならないかの問題ではなく、いつ起こるかという問題である。それが勃発する前に、我々は強力な同盟国を追求しようと努めるべきだ。北のはるか遠くにキリスト教の王国があるが、その正確な場所とその土地までの距離はわからない。しかし、我々は彼らを見つけるという目的で遠征に資金を提供することができる。"
  coptic_flavor.33.a:0 "最高の探検家、聖職者、外交官の一団を派遣しろ！"
  coptic_flavor.33.a.tt:0 "仲間のキリスト教徒を求めて北に遠征隊を派遣します。成功は保証されていませんが、共通の宗教的な敵に関する何らかの援助を発見することができるだろう。"
  coptic_flavor.33.b:0 "神が我らのそばにいるとき、我らは誰一人として必要としていない。"
@@ -496,7 +496,7 @@
  harem_events.2.a:0 "[Root.Monarch.GetTitle]万歳！"
  harem_events.2.a.tt:0 "時間だけが、§Y[Root.Monarch.GetName]§!がどんな支配者となるかを教えてくれる。"
  harem_events.3.t:0 "サンジャガ・チクマ"
- harem_events.3.d:0 "我々のお気に入りの後継者である、[Root.Heir.GetName]は若く、まだ人生と良い支配者になる方法について学ぶことが多くある。我々の大部分の宰相は、我々の息子たちを小さな州の知事や支配者として行動させる王朝の伝統を支えることが我々の義務だと感じている。こうして彼らは支配者となることを学ぶことができる。適切に強力な州を割り当てることで、将来の継承闘争の可能性を減らすこともできる。[sancaga_cikma_province.GetName]は過去にこのような長官の役目を務めてきたが、[Root.Heir.GetName]には非常に適当だろう。\n一方で、母親のヴァリデ・スルタンを含む他の者たちは、若い[Root.Heir.GetName]にとって、[Root.Heir.GetSheHe]が良い教師に絶えず接触できる帝国のハレムの壁の中で彼を知る人によって教育の恩恵を受けることができると感じている。この方法では、[Root.Heir.GetSheHe]時期尚早の政治的野心を発達させる可能性のあるあらゆる場所から[Root.Heir.GetSheHe]遠く離れることになるだろう。"
+ harem_events.3.d:0 "我々のお気に入りの後継者である、[Root.Heir.GetName]は若く、まだ人生と良い支配者になる方法について学ぶことが多くある。我々の大部分の宰相は、我々の息子たちを小さな州の知事や支配者として行動させる王朝の伝統を支えることが我々の義務だと感じている。こうして彼らは支配者となることを学ぶことができる。適切に強力な州を割り当てることで、将来の継承闘争の可能性を減らすこともできる。[sancaga_cikma_province.GetName]は過去にこのような長官の役目を務めてきたが、[Root.Heir.GetName]には非常に適当だろう。\n一方で、母親のヴァリデ・スルタンを含む他の者たちは、若い[Root.Heir.GetName]にとって、[Root.Heir.GetSheHe]が良い教師に絶えず接触できる帝国のハレムの壁の中で彼を知る人によって教育の恩恵を受けることができると感じている。この方法では、[Root.Heir.GetSheHe]が時期尚早の政治的野心を発達させる可能性のあるあらゆる場所から[Root.Heir.GetSheHe]を遠ざけることになるだろう。"
  harem_events.3.a:0 "[sancaga_cikma_province.GetName]を統治することで、[Root.Heir.GetHerHim]にとって良いことを多く行うだろう。"
  harem_events.3.a.tt:0 "§Y[Root.Heir.GetName]§!は§Y[sancaga_cikma_province.GetName]§!の完全な支配権を与えられ、すべてがうまくいけば、支配者としての能力が向上するかもしれません。"
  harem_events.3.b:0 "若い[Root.Heir.GetWomanMan]にとっては帝国のハレムが最適だ！"
@@ -835,7 +835,7 @@
  barren_lands:0 "不毛の土地"
  desc_barren_lands:0 "深刻な干ばつに苦しんだ後、これらの土地の畑は乾燥し不毛なまま取り残されている。"
  ancestral_tomb:0 "祖先の墓"
- desc_ancestral_tomb:0 "我々の支配者の祖先の土地はこの州にある。偉大な墓は我が国にとって宗教に重要な意味を持っている。"
+ desc_ancestral_tomb:0 "我々の支配者の祖先の土地はこの州にある。偉大な墓は我が国にとって宗教的に重要な意味を持っている。"
  grand_ancestral_tomb:0 "偉大な祖先の墓"
  desc_grand_ancestral_tomb:0 "我々の支配者の祖先の土地はこの州にある。新しく復元された墓は、国家の最も印象的な建物の一つであり、我が国の人々にとって大きな宗教的重要性を持っている。"
  crumbling_ancestral_tomb:0 "崩れかけた祖先の墓"
@@ -920,7 +920,7 @@
  rebuilding_efforts:0 "再建への努力"
  desc_rebuilding_efforts:0 "この州は災害に見舞われた後、修理や再建を迅速に行うため、金銭的な支援を受けている。"
  fetishist_flavor.400.t:0 "神の子"
- fetishist_flavor.400.d:0 "我々は最近、彼らが神の御子であると主張する「キリスト」の言葉を伝える奇妙な人々と遭遇した。彼らによれば、彼は天から降りて、我々の間を歩き、愛と許しについて教えたと言う。結局、彼は我々の罪のために十字架の上で死に、天一度だけ復活して天に昇った。彼らはいつか、救い主が彼の信者に永遠の命を与え、神の最終的な王国を確立するために地上に戻ってくると語る。"
+ fetishist_flavor.400.d:0 "我々は最近、彼らが神の御子であると主張する「キリスト」の言葉を伝える奇妙な人々と遭遇した。彼らによれば、彼は天から降りて、我々の間を歩き、愛と許しについて教えたと言う。結局、彼は我々の罪のために十字架の上で死に、一度だけ復活して天に昇った。彼らはいつか、救い主が彼の信者に永遠の命を与え、神の最終的な王国を確立するために地上に戻ってくると語る。"
  fetishist_flavor.400.a:0 "永遠の命、と言ったか？もっと教えてくれ。"
  fetishist_flavor.401.t:0 "唯一神"
  fetishist_flavor.401.d:0 "我々は彼らが「アッラー」と呼ぶ唯一の真の神を崇拝するため、命を捧げる人々に出会った。彼らは、ムハンマドという名で呼ばれる、彼らの最も偉大な預言者によって与えられた定めによって生きる。我々は、神の真のしもべであり、信仰告白、礼拝、喜捨、断食、「メッカ」への巡礼、の五柱を守らなければならないと言われている。彼らは我々に、明らかな神の最後の不変の啓示を保持した「コーラン」という聖典を分けてくれた。"
@@ -1542,7 +1542,7 @@
  revolutionary_republic_factions.6.d:0 "彼らは、主に軍事行動を通じて海外に革命を広める提唱者と見なされるようになったが、$RR_GIRONDISTS$も多くの点で設立の代弁者である。今、彼らは国会でかなりの影響力を発揮し、一連の正式な規則である、新しい国家の憲法を制定することを試みている。これは、その種の最初の事業ではなく、おそらく最後のものでもないだろうが、彼らはそれが我々を、新しい秩序と自由主義、平等と友愛の時代に一歩近づけることを望んでいる。"
  revolutionary_republic_factions.6.a:0 "共和国よ永遠に！"
  revolutionary_republic_factions.7.t:0 "統治者の不足"
- revolutionary_republic_factions.7.d:0 "古い秩序を粉砕したことは、国庫にかなりの資産をもたらしただけでなく、大衆に比類のない正義と平等とを与えた。しかしそれはまた、経験豊富な統治者、官僚、聖職者が失われたことも意味している。$RR_GIRONDISTS$は、すぐに古い体制の様々な多くの残った人々の派閥となり、彼らはすべての原則で革命を支持していると主張しているが、最近受け入れられた傾向に対しては狼狽している。このような小さな貴族の息子たちの多くや、古い聖職者やその他の特権階級は、公務から撤退し、彼らの人生を心配して国を去っている。\nこれは我々に、統治する対象は多いものの、それを行うために必要な経験を持つ人が少ないという状態を残してしまった。政府の基本理念である才能を生かして、新しい市民が自らの地位を築くことは確実であるが、それでも当分の間は、そのような状況が続くだろう。"
+ revolutionary_republic_factions.7.d:0 "古い秩序を粉砕したことは、国庫にかなりの資産をもたらしただけでなく、大衆に比類のない正義と平等とを与えた。しかしそれはまた、経験豊富な統治者、官僚、聖職者が失われたことも意味している。$RR_GIRONDISTS$は、すぐに古い体制から残った様々な人々の派閥となり、彼らはすべての原則で革命を支持していると主張しているが、最近受け入れられた傾向に対しては狼狽している。このような小さな貴族の息子たちの多くや、古い聖職者やその他の特権階級は、公務から撤退し、彼らの人生を心配して国を去っている。\nこれは我々に、統治する対象は多いものの、それを行うために必要な経験を持つ人が少ないという状態を残してしまった。政府の基本理念である才能を生かして、新しい市民が自らの地位を築くことは確実であるが、それでも当分の間は、そのような状況が続くだろう。"
  revolutionary_republic_factions.7.a:0 "人々の進歩に比べれば安いものだ。"
  revolutionary_republic_factions.7.b:0 "少なくとも、彼らのうちいくつかを滞在させよう。"
  revolutionary_republic_factions.8.t:0 "人気ある将軍"
