--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -360,7 +360,7 @@
  KNOWLEDGE_SHARING_EFFECT:0 "$INSTITUTION$の採用は$RECIPIENT$の首都地域において加速されるでしょう。"
  KNOWLEDGE_SHARING_INTERACT_DESC:0 "毎月、彼らの収入の§R$PERCENT$%§!（$INCOME|Y$ ¤）を支払うことで、我々が確立した最も古い制度のうち彼らが受容していないもの（現在は$INSTITUTION|Y$）の成長は、彼らの首都地域で毎月$GROWTH$加速します。"
  OFFER_KNOWLEDGESHARENEWDESC:0 "$COUNTRY|Y$への知識共有の提案を行いますか？受け入れられた場合、彼らは我々に毎月収入の§G$PERCENT$%§!（$INCOME|Y$ ¤）を支払うでしょう。一方、我々が確立した最も古い制度のうち彼らが受容していないもの（現在は$INSTITUTION|Y$）の成長は、彼らの首都地域で毎月$GROWTH$加速します。"
- KNOWLEDGESHARE_EXPIRY:0 "この協定は$YEARS|Y$年が経過するか、移転できる知識が無くなるか、たがいが敵対する側で戦争に参加するかのいずれかが発生した時点で終了します。"
+ KNOWLEDGESHARE_EXPIRY:0 "この協定は$YEARS|Y$年が経過するか、移転できる知識が無くなるか、互いが敵対する側で戦争に参加するかのいずれかが発生した時点で終了します。"
  OUTSIDE_COLONIAL_RANGE_ANY:0 "植民範囲外です（すべての州から）。"
  NO_INSTITUTION_TO_SHARE:0 "彼らが我々から学ぶことのできる制度はありません。"
  WE_SHARING_KNOWLEDGE:1 "我々はすでに$EXPIRY$までの間、@$TAG$ $NAME$と知識を共有しています。"
@@ -454,7 +454,7 @@
  CHANGE_ASPECT_COST:0 "$COST|Y$の教会権力コスト"
  COMPLETE_MISSION_EFFECT:0 "報酬のないミッションの$MISSION|Y$を完了しました"
  island_provinces_tooltip:0 "ストックホルム、パナマあるいはグーグ・イミディルに直接土地が繋がっていないすべての州を所有するか、あるいはそれを所有する非朝貢国である従属国を持っている。"
- CLICK_TO_CENTER_HIGHLIGHTED:0 "中心に行く"
+ CLICK_TO_CENTER_HIGHLIGHTED:0 "クリックすると画面中央に表示"
  HAVE_THE_ACTIVE_PROVINCE_MODIFIER:0 "州補正が有効"
  DONT_HAVE_THE_ACTIVE_PROVINCE_MODIFIER:0 "州補正が無効"
  READ_MORE:0 "続きを読む"
