--- a/source/localisation/sikh_l_english.yml
+++ b/source/localisation/sikh_l_english.yml
@@ -40,7 +40,7 @@
  sikhism_flavor.6.d:0 "「私があなたが持ってきた玉ねぎを粉砕するように、あなたの息子は敵の頭を粉砕し、すぐに偉大な戦士となり、高貴なグルとなるでしょう」\n\nそう話したのは、アルジャンとグル・ハーゴビンドの後見人である先見者ババ・ブッダです。世界は変わり、もはやシーク教徒は潜在的な敵を慈悲深く信じることはできず、グルやその弟子たちを殉職者にしようとするものたちから武器を取り上げています。"
  sikhism_flavor.6.a:0 "剣をグルの冠へと取り換えるとしよう。"
  sikhism_flavor.7.t:0 "グル・ハー・ライ"
- sikhism_flavor.7.d:0 "グル・ハー・ライの孫、ハー・ライは、グルの地位を引き継ぐために祖父から訓練を受けていました。そして今、その時がやって来たました。戦闘の方法を指導し、彼の前任者によって構築された軍隊の維持を行ったが、ハー・ライは、とても過敏な気質で、彼の全ての生物の対する愛は外交的解決を求めています。"
+ sikhism_flavor.7.d:0 "グル・ハー・ライの孫、ハー・ライは、グルの地位を引き継ぐために祖父から訓練を受けていました。そして今、その時がやって来ました。戦闘の方法を指導し、彼の前任者によって構築された軍隊の維持を行いましたが、ハー・ライは、とても過敏な気質で、彼の全ての生物に対する愛は外交的解決を求めています。"
  sikhism_flavor.7.a:0 "戦いは十分。今は癒しの時間です。"
  sikhism_flavor.8.t:0 "グル・ハー・クリシャン"
  sikhism_flavor.8.d:0 "グル・ハー・ライの体は亡くなり、その地位に就く非常に若い後継者を残しました。ハー・クリシャンは、信仰に固執するよりも外交哲学を重視する兄よりも優れた候補者と考えられました。我々の新しいグルは、敬虔で親切なわけではありませんが、僅か4才という若い年齢では外交の選択肢は制限されています。"
