--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1732,7 +1732,7 @@
  magadha_conquered:0 "マガダの陥落"
  desc_magadha_conquered:0 "マガダの征服は経済的にも政治的にも我が国家を強化した。伝統的な価値観の守護者として、そして、長く失われた帝国の野望の復活者として自身を位置づけた。"
  forts_of_rajputana:0 "ラージプーターナーの要塞"
- desc_forts_of_rajputana:0 "ラージプーターナーの丘陵を要塞化する試みはどんな侵略者も止める一連の強力な防衛設備という形で実を結んだ。これらの要塞はまた我が国家の支配拠点とほぼおなじくらい印象的である。なぜこれらが建設されたのかと強く異議を唱える者もいるが．．．"
+ desc_forts_of_rajputana:0 "ラージプーターナーの丘陵を要塞化する試みはどんな侵略者も止める一連の強力な防衛設備という形で実を結んだ。これらの要塞はまた我が国家の支配拠点とほぼおなじくらい印象的である。なぜこれらが建設されたのかと強く異議を唱える者もいるが..."
  city_of_lakes:0 "湖の街"
  desc_city_of_lakes:0 "ウダイプルは、我々の王朝が、我々の旧王国の中心地に湖で囲まれた場所に立てた新しく荘厳な首都である。我が国家が独立を保ち続ける限り、ウダイプルは強く立っているだろう。"
  mer_plains_of_punjab:0 "パンジャーブの平原"
